<resources>
    <string name="app_name">Laboratorio02</string>
    <string name="main_titulo">Menu de opciones</string>
    <string name="selCat">Seleccionar una categoría</string>
    <string name="lstProd">Lista de Productos</string>
    <string name="cantPedir">Cantidad a pedir</string>
    <string name="btnAdd">Agregar</string>
    <string name="costo">Total del pedido: $ %.2f</string>
    <string name="canal_estado_nombre">Canal 1</string>
    <string name="canal_estado_descr">Canal Descr 1</string>
    <string name="retirar">Retirar por defecto</string>
    <string name="retirar2">El pedido es para retirar</string>
    <string name="email">Correo electrónico</string>
    <string name="email2">Se usará por defecto</string>
    <string name="config">Configuración</string>
    <string name="btnCategorias">Categorías</string>
    <string name="tvCategorias">Nombre de la cateforía</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnVolver">Volver</string>
    <string name="ErrorHttp">ERROR: No se pudo ejecutar la operación</string>
    <string name="default_notification_channel_id">CANAL01</string>
    <string name="tgCrear">Crear producto nuevo</string>
    <string name="tvBuscar">Buscar producto por ID</string>
    <string name="tgBuscar">Buscar producto</string>
    <string name="btnBuscar">Buscar por ID</string>
    <string name="tvDatos">Datos del producto</string>
    <string name="tvNombre">Nombre</string>
    <string name="tvDesc">Descripción</string>
    <string name="tvPrecio">Precio</string>
    <string name="tvCategoria">Categoría</string>
    <string name="btnBorrar">Borrar</string>
</resources>