<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GestionProductoActivity">

    <ToggleButton
        android:id="@+id/crearOBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tgCrear" />

    <TextView
        android:id="@+id/tvBuscarPorID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvBuscar" />

    <EditText
        android:id="@+id/edtBuscarPorID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Buscar" />

    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBuscar" />

    <TextView
        android:id="@+id/tvDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDatos" />

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvNombre" />

    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tvNombre" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDesc" />

    <EditText
        android:id="@+id/edtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tvDesc" />

    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvPrecio" />

    <EditText
        android:id="@+id/edtPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tvPrecio" />

    <TextView
        android:id="@+id/tvCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvCategoria" />

    <Spinner
        android:id="@+id/spCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardar" />

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBorrar" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVolver"/>
</LinearLayout>